Fix: CI - Add cov reporter

--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coverageReporters": [
+      "json-summary"
+    ]
   }
 }
