--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://user:dbpassword@homeserver:15434/dbname?schema=public"
+GUPSHUP_BASEURL="http://enterprise.smsgupshup.com/GatewayAPI/rest"
+OTP_EXPIRY=30
+GUPSHUP_USERNAME="2000xxxxxxx"
+GUPSHUP_PASSWORD="password"
+GUPSHUP_OTP_TEMPLATE="Hi User! The OTP to reset password for Samagra Shiksha App is %code%."
+FUSIONAUTH_APPLICATION_ID="f0ddb3f6-091b-45e4-8c0f-889f89d4f5da"
+FUSIONAUTH_BASE_URL="http://www.auth.samagra.io:9011/"
+FUSIONAUTH_API_KEY="bla"
