--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,13 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#using-environment-variables
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server (Preview) and MongoDB (Preview).
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="postgresql://user:dbpassword@homeserver:15434/dbname?schema=public"
+
+# Gupshup
 GUPSHUP_BASEURL="http://enterprise.smsgupshup.com/GatewayAPI/rest"
 OTP_EXPIRY=30
 GUPSHUP_USERNAME="2000xxxxxxx"
 GUPSHUP_PASSWORD="password"
 GUPSHUP_OTP_TEMPLATE="Hi User! The OTP to reset password for Samagra Shiksha App is %code%."
+
+# Fusionauth
 FUSIONAUTH_APPLICATION_ID="f0ddb3f6-091b-45e4-8c0f-889f89d4f5da"
 FUSIONAUTH_BASE_URL="http://www.auth.samagra.io:9011/"
 FUSIONAUTH_API_KEY="bla"
