Fix: file association setting for .env.sample

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
         "source.fixAll.eslint": true,
         "source.fixAll.tslint": true,
         "source.fixAll.stylelint": true
+      },
+      "files.associations": {
+        ".env.sample": "dotenv",
       }
 }
