--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "2.28.0",
+    "ajv": "^8.6.2",
     "got": "^11.8.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -50,6 +51,7 @@
     "jest": "27.0.6",
     "prettier": "^2.3.2",
     "prisma": "2.28.0",
+    "prismix": "^1.0.16",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
