--- a/package.json
+++ b/package.json
@@ -81,12 +81,15 @@
     "testEnvironment": "node",
     "coverageReporters": [
       "json-summary",
-      "text"
+      "text",
+      "lcov"
     ]
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog",
+      "maxHeaderWidth": 100,
+      "maxLineWidth": 100
     }
   },
   "husky": {
