feat(services): unstable Commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,17 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: yarn test
+      
       - name: Tests
         run: yarn test:cov
+      
+      - name: Generating coverage badge
+        uses: jpb06/jest-badges-action@v1.6.0
+        with:
+          branches: master
+      
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+    
