--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
+    "@nestjs/throttler": "^2.0.0",
     "@prisma/client": "2.28.0",
     "ajv": "^8.6.2",
     "got": "^11.8.2",
