--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Push
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:${{ env.RELEASE_VERSION }}
+          tags: samagragovernance/esamwad-user-service:latest, samagragovernance/esamwad-user-service:${{ env.RELEASE_VERSION }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
