--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:latest,${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:${{ env.RELEASE_VERSION }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
