--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           push: true
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:${{ env.RELEASE_VERSION }}
+            samagragovernance/esamwad-user-service:latest
+            samagragovernance/esamwad-user-service:${{ env.RELEASE_VERSION }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
