--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -27,6 +27,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/esamwad-user-service:latest
 
