--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
 	"recommendations": [
 		"MS-vsliveshare.vsliveshare",
         "vscode-icons-team.vscode-icons",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+		"esbenp.prettier-vscode"
 	]
 }
