--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules
 # Keep environment variables out of version control
 .env
 dist
-converage/lcov-report
+coverage/lcov-report
 badges
 templates.json
