--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/throttler": "^2.0.0",
     "@prisma/client": "2.28.0",
     "ajv": "^8.6.2",
+    "crypto-js": "^4.1.1",
     "got": "^11.8.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
