--- a/.env.sample
+++ b/.env.sample
@@ -9,5 +9,7 @@ GUPSHUP_OTP_TEMPLATE="Hi User! The OTP to reset password for Samagra Shiksha App
 
 # Fusionauth
 FUSIONAUTH_APPLICATION_ID="f0ddb3f6-091b-45e4-8c0f-889f89d4f5da"
-FUSIONAUTH_BASE_URL="http://www.auth.samagra.io:9011/"
+FUSIONAUTH_SAMARTH_HP_APPLICATION_ID=f18c3f6f-45b8-4928-b978-a9906fd03f22
+FUSIONAUTH_BASE_URL="https://auth.samarth.samagra.io"
 FUSIONAUTH_API_KEY="bla"
+ENCRYPTION_KEY="bla"
