--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@fusionauth/typescript-client": "^1.29.1",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/throttler": "^2.0.0",
@@ -36,6 +38,8 @@
     "ajv": "^8.6.2",
     "crypto-js": "^4.1.1",
     "got": "^11.8.2",
+    "passport": "^0.5.2",
+    "passport-http": "^0.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -49,6 +53,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
+    "@types/passport": "^1.0.7",
+    "@types/passport-http": "^0.3.9",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
