--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
-    "@nestjs/throttler": "^2.0.0",
+    "@nestjs/throttler": "^2.0.1",
     "@prisma/client": "2.28.0",
     "ajv": "^8.6.2",
     "crypto-js": "^4.1.1",
     "got": "^11.8.2",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -55,6 +57,7 @@
     "@types/node": "^16.0.0",
     "@types/passport": "^1.0.7",
     "@types/passport-http": "^0.3.9",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
