.env.sample: added missing variables

--- a/.env.sample
+++ b/.env.sample
@@ -8,10 +8,37 @@ GUPSHUP_PASSWORD="password"
 GUPSHUP_OTP_TEMPLATE="Hi User! The OTP to reset password for Samagra Shiksha App is %code%."
 
 # Fusionauth
-FUSIONAUTH_APPLICATION_ID="f0ddb3f6-091b-45e4-8c0f-889f89d4f5da"
-FUSIONAUTH_SAMARTH_HP_APPLICATION_ID=f18c3f6f-45b8-4928-b978-a9906fd03f22
+FUSIONAUTH_APPLICATION_ID="f0ddb3f6-091b-45e4-8c0f-xxxx"
+FUSIONAUTH_SAMARTH_HP_APPLICATION_ID=f18c3f6f-45b8-4928-b978-xxxx
+FUSIONAUTH_SHIKSHA_SATHI_HP_APPLICATION_ID=1ae074db-32f3-4714-a150-xxxx
+FUSIONAUTH_DST_APPLICATION_ID=8924d6c5-de33-4b46-99e2-xxxx
 FUSIONAUTH_BASE_URL="https://auth.samarth.samagra.io"
 FUSIONAUTH_API_KEY="bla"
+FUSIONAUTH_OLD_BASE_URL=http://auth.samagra.io:9011
+FUSIONAUTH_OLD_API_KEY="bla"
 ENCRYPTION_KEY="bla"
+PAGINATION_PER_PAGE=10
+
+# DST
+DST_HASURA_HOST=
+DST_HASURA_SECRET=
+
+# Rate Limiting
+RATE_LIMIT_TTL=60
+RATE_LIMIT=50000
+DST_API_LIMIT=10
+DST_API_TTL=86400
+
+# Basic Auth
+HTTP_BASIC_USER=
+HTTP_BASIC_PASS=
+
+# Esamwad
+ESAMWAD_BACKEND_BASE_URL=http://e-samwad.samagra.io
+ES_TEACHER_PART=/api/v5/drf/teacher/
+ES_SCHOOL_PART=/api/v5/drf/school/
+
+# JWT Auth Guard secret (public key from Fusion Auth)
+secret=
 
 # application_id={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}
