.env.sample: added `ENCRYPTION_ENABLED` flag

--- a/.env.sample
+++ b/.env.sample
@@ -17,6 +17,7 @@ FUSIONAUTH_API_KEY="bla"
 FUSIONAUTH_OLD_BASE_URL=http://auth.samagra.io:9011
 FUSIONAUTH_OLD_API_KEY="bla"
 ENCRYPTION_KEY="bla"
+ENCRYPTION_ENABLED=TRUE  # TRUE = Enabled, FALSE = Disable
 PAGINATION_PER_PAGE=10
 
 # DST
