Comment added to have applicationId with "_" separator; Fixed the transformer logic & added comments for future references

--- a/.env.sample
+++ b/.env.sample
@@ -14,4 +14,4 @@ FUSIONAUTH_BASE_URL="https://auth.samarth.samagra.io"
 FUSIONAUTH_API_KEY="bla"
 ENCRYPTION_KEY="bla"
 
-# application_id={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}
+# application_id={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}   # the key "application_id" must be underscore(_) separated instead of hyphen(-)
