--- a/.env.sample
+++ b/.env.sample
@@ -14,4 +14,4 @@ FUSIONAUTH_BASE_URL="https://auth.samarth.samagra.io"
 FUSIONAUTH_API_KEY="bla"
 ENCRYPTION_KEY="bla"
 
-# application_id={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}   # the key "application_id" must be underscore(_) separated instead of hyphen(-)
+# APP_abcd3f6f_45b8_4928_b978_a9906fd03f22={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}   # the key "application_id" must be underscore(_) separated instead of hyphen(-). Also it must be prefixed with <APP_>
