Admin/User/Search: added (backward compatible) support to configure the search API pick application IDs from env variable

--- a/.env.sample
+++ b/.env.sample
@@ -14,5 +14,6 @@ FUSIONAUTH_HP_ADMIN_CONSOLE_APPLICATION_ID=
 FUSIONAUTH_BASE_URL="https://auth.samarth.samagra.io"
 FUSIONAUTH_API_KEY="bla"
 ENCRYPTION_KEY="bla"
+FUSIONAUTH_ADMIN_SEARCH_APPLICATION_IDS=["1", "2"]  # JSON array of application IDs
 
 # APP_abcd3f6f_45b8_4928_b978_a9906fd03f22={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}   # the key "application_id" must be underscore(_) separated instead of hyphen(-). Also it must be prefixed with <APP_>
