--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
+    "@nestjs/terminus": "^9.1.4",
     "@nestjs/throttler": "^2.0.1",
     "@prisma/client": "2.28.0",
     "ajv": "^8.6.2",
