--- a/package.json
+++ b/package.json
@@ -25,33 +25,33 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fusionauth/typescript-client": "^1.29.1",
-    "@golevelup/ts-jest": "^0.3.3",
+    "@fusionauth/typescript-client": "^1.43.0",
+    "@golevelup/ts-jest": "^0.3.5",
     "@nestjs/axios": "^0.0.7",
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^8.*",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/swagger": "^5.0.9",
-    "@nestjs/terminus": "^9.1.4",
+    "@nestjs/terminus": "9.2.1",
     "@nestjs/throttler": "^2.0.1",
     "@prisma/client": "2.28.0",
-    "ajv": "^8.6.2",
+    "ajv": "^8.12.0",
     "crypto-js": "^4.1.1",
-    "got": "^12.5.3",
+    "got": "^11.8.2",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.8.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.8",
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
