--- a/.env.sample
+++ b/.env.sample
@@ -16,4 +16,4 @@ FUSIONAUTH_API_KEY="bla"
 ENCRYPTION_KEY="bla"
 FUSIONAUTH_ADMIN_SEARCH_APPLICATION_IDS=["1", "2"]  # JSON array of application IDs
 
-# APP_abcd3f6f_45b8_4928_b978_a9906fd03f22={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}}   # the key "application_id" must be underscore(_) separated instead of hyphen(-). Also it must be prefixed with <APP_>
+# APP_abcd3f6f_45b8_4928_b978_a9906fd03f22={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}, "salt": "sampl-salt-for-otp-encrypption"}   # the key "application_id" must be underscore(_) separated instead of hyphen(-). Also it must be prefixed with <APP_>
