--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.0",
+    "speakeasy": "^2.0.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
