feature to create users on flagsmith on login and added default otp for testing.

--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,12 @@ ENCRYPTION_KEY="bla"
 FUSIONAUTH_ADMIN_SEARCH_APPLICATION_IDS=["1","2"]  # JSON array of application IDs
 
 # APP_abcd3f6f_45b8_4928_b978_a9906fd03f22={"host": "dummy.com", "encryption": {"enabled": true, "key": "veryhardkey"}, "salt": "sampl-salt-for-otp-encrypption"}   # the key "application_id" must be underscore(_) separated instead of hyphen(-). Also it must be prefixed with <APP_>
+
+#Flagsmith
+USE_FLAGSMITH="true" #true or false
+FLAGSMITH_ENVIRONMENT_KEY=
+
+#Testing
+ALLOW_DEFAULT_OTP="false"
+DEFAULT_OTP="1234"
+DEFAULT_OTP_USERS=["9999999999"] # JSON array of mobile numbers
