--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@prisma/client": "2.28.0",
     "ajv": "^8.12.0",
     "crypto-js": "^4.1.1",
+    "flagsmith-nodejs": "^2.5.2",
     "got": "^11.8.2",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
