Sentry integration done in `api` module

--- a/.env.sample
+++ b/.env.sample
@@ -36,3 +36,6 @@ FLAGSMITH_ENVIRONMENT_KEY=
 ALLOW_DEFAULT_OTP="false"
 DEFAULT_OTP="1234"
 DEFAULT_OTP_USERS=["9999999999"] # JSON array of mobile numbers
+
+# Sentry
+SENTRY_DSN=
