--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nestjs/terminus": "9.2.1",
     "@nestjs/throttler": "^2.0.1",
     "@prisma/client": "2.28.0",
+    "@sentry/minimal": "^6.19.7",
+    "@sentry/node": "^7.57.0",
     "ajv": "^8.12.0",
     "crypto-js": "^4.1.1",
     "flagsmith-nodejs": "^2.5.2",
