SecurityHeaders: added package helmet for security headers[default setting]

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "crypto-js": "^4.1.1",
     "flagsmith-nodejs": "^2.5.2",
     "got": "^11.8.2",
+    "helmet": "^7.0.0",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
