--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@sentry/minimal": "^6.19.7",
     "@sentry/node": "^7.57.0",
     "ajv": "^8.12.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
     "flagsmith-nodejs": "^2.5.2",
     "got": "^11.8.2",
