--- a/.env.sample
+++ b/.env.sample
@@ -39,3 +39,8 @@ DEFAULT_OTP_USERS=["9999999999"] # JSON array of mobile numbers
 
 # Sentry
 SENTRY_DSN=
+
+# CORS
+CORS_ALLOWED_ORIGINS=https://example.com
+CORS_ALLOWED_HEADERS=Content-Type,Authorization,x-application-id
+CORS_ALLOWED_METHODS=GET,PUT,POST,DELETE,PATCH,OPTIONS
