Feat: Added JWT verification endpoint

--- a/.env.sample
+++ b/.env.sample
@@ -44,3 +44,5 @@ SENTRY_DSN=
 CORS_ALLOWED_ORIGINS=https://example.com
 CORS_ALLOWED_HEADERS=Content-Type,Authorization,x-application-id
 CORS_ALLOWED_METHODS=GET,PUT,POST,DELETE,PATCH,OPTIONS
+
+JWKS_URI=
