RAJAI OTP Service module

--- a/.env.sample
+++ b/.env.sample
@@ -13,9 +13,14 @@ CDAC_OTP_TEMPLATE_ID="123456"
 CDAC_OTP_TEMPLATE="Respected User, The OTP to reset password for %phone% is %code%."
 
 # SMS Adapter
-SMS_ADAPTER_TYPE=    # CDAC or GUPSHUP
+SMS_ADAPTER_TYPE=    # CDAC or GUPSHUP or RAJAI
 SMS_TOTP_SECRET=     # any random string, needed for CDAC
 SMS_TOTP_EXPIRY=600  # in seconds, needed for CDAC
+
+#RAJAI OTP Service
+RAJAI_USERNAME= 
+RAJAI_PASSWORD=
+RAJAI_BASEURL=
 
 # Fusionauth
 FUSIONAUTH_APPLICATION_ID="f0ddb3f6-091b-45e4-8c0f-889f89d4f5da"
