--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@fusionauth/typescript-client": "^1.43.0",
     "@golevelup/ts-jest": "^0.3.5",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.*",
     "@nestjs/config": "^1.0.1",
@@ -47,6 +48,9 @@
     "flagsmith-nodejs": "^2.5.2",
     "got": "^11.8.2",
     "helmet": "^7.0.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
