--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sentry/minimal": "^6.19.7",
     "@sentry/node": "^7.57.0",
     "ajv": "^8.12.0",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
