--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "2",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
