Add Fonada SMS service integration and update .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,13 @@ CDAC_SERVICE_URL=
 CDAC_OTP_TEMPLATE_ID="123456"
 CDAC_OTP_TEMPLATE="Respected User, The OTP to reset password for %phone% is %code%."
 
+# FONADA
+FONADA_SERVICE_URL=
+FONADA_OTP_TEMPLATE=
+FONADA_OTP_TEMPLATE_ID=
+FONADA_USERNAME=
+FONADA_PASSWORD=
+
 # SMS Adapter
 SMS_ADAPTER_TYPE=    # CDAC or GUPSHUP or RAJAI
 SMS_TOTP_SECRET=     # any random string, needed for CDAC
